--- a/XOT/layouts/_grid.scss
+++ b/XOT/layouts/_grid.scss
@@ -2,7 +2,7 @@
 
 .grid {
     display: grid;
-    gap: var(--gap);
+    gap: var(--grid-gap);
 }
 
 /* Grid Template Columns */
