--- a/XOT/utility/_utilityClass.scss
+++ b/XOT/utility/_utilityClass.scss
@@ -49,20 +49,20 @@
 
 
 // Text colour
-.text-dark {
-    color: var(--text-dark);
-}
+// .text-dark {
+//     color: var(--text);
+// }
 
 .text-gray {
-    color: var(--text-gray);
+    color: #555555;
 }
 
 .text-light {
-    color: var(--text-light);
+    color: #8A8A8A;
 }
 
 .text-white {
-    color: var(--white);
+    color: #ffffff;
 }
 
 .text-success {
